Fix underfull and overfull hboxes

--- a/foundations.tex
+++ b/foundations.tex
@@ -39,7 +39,8 @@ Under these constructions, morphisms in $S$ become invertible.
 We run into the following problem: the quasiisomorphisms that we want to invert are not a localizing class in $\mathrm{Ch}(\calA)$! The way to get around this issue is to introduce the homotopy category, where they do indeed localize:
 
 \begin{theorem}{Quasiisomorphisms localize in the homotopy category}{Quis form a localizing class}
-    Quasiisomosphism form a localizing class in the homotopy category of an abelian category $K(\calA)$. We denote the derived category by
+
+    Quasiisomosphisms form a localizing class in the homotopy category of an abelian category $K(\calA)$. We denote the derived category by
     \begin{equation*}
         D(\calA)\coloneqq K(\calA)[Q^{-1}]
     \end{equation*}
@@ -489,7 +490,7 @@ From the Koszul resolution, we see that the latter is just an exterior algebra!
 \begin{remark}{Deformations}{}
     We see that the global sections of the normal bundle of $Y$, which describe its deformations inside $X$, can be described by $\Ext^1(\O_Y,\O_Y)$.
 \end{remark}
-We mention briefly the Hochschild cohomology $HH^\bullet(X):=\Ext^\bullet(\O_{\Delta_X}, \O_{\Delta_X})$ and its dual Hochschild homology, and the following important theorem, which boils down to the local-to-global spectral sequence degenerating:
+We mention briefly the Hochschild cohomology $HH^\bullet(X):=\Ext^\bullet(\O_{\Delta_X}, \O_{\Delta_X})$, and the following important theorem, which boils down to the local-to-global spectral sequence degenerating:
 \begin{theorem}{Hochschild-Kostant-Rosenberg}{HKR}
     $$HH^k(\mathcal{D}(X))=\bigoplus_{p+q=k} H^q(X, \Lambda^p T_X), HH_k(\mathcal{D}(X))=\bigoplus_{q-p=k} H^q(X, \Omega^p_X)=\bigoplus_{q-p=k} H^{p,q}(X)$$
     
