fixed some toric stuff

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -248,3 +248,73 @@
 	doi = {10.1007/978-3-319-46209-7_3},
 	pages = {67--104},
 }
+
+
+@article{coates_git_walls,
+author = {Coates, Tom},
+title = {WALL-CROSSINGS IN TORIC GROMOV–WITTEN THEORY II:
+LOCAL EXAMPLES},
+howpublished = {\url{https://arxiv.org/pdf/0804.2592.pdf}},
+month = {},
+year = {},
+note = {(Accessed on 04/16/2024)}
+}
+
+@misc{halpernleistner2016autoequivalences,
+      title={Autoequivalences of derived categories via geometric invariant theory}, 
+      author={Daniel Halpern-Leistner and Ian Shipman},
+      year={2016},
+      eprint={1303.5531},
+      archivePrefix={arXiv},
+      primaryClass={math.AG}
+}
+
+@article{Kite_2022,
+   title={Discriminants and Semi-orthogonal Decompositions},
+   volume={390},
+   ISSN={1432-0916},
+   url={http://dx.doi.org/10.1007/s00220-021-04298-2},
+   DOI={10.1007/s00220-021-04298-2},
+   number={2},
+   journal={Communications in Mathematical Physics},
+   publisher={Springer Science and Business Media LLC},
+   author={Kite, Alex and Segal, Ed},
+   year={2022},
+   month=feb, pages={907–931} }
+
+
+@misc{ballard2014variation,
+      title={Variation of geometric invariant theory quotients and derived categories}, 
+      author={Matthew Ballard and David Favero and Ludmil Katzarkov},
+      year={2014},
+      eprint={1203.6643},
+      archivePrefix={arXiv},
+      primaryClass={math.AG}
+}
+
+@misc{halpernleistner2014derived,
+      title={The derived category of a GIT quotient}, 
+      author={Daniel Halpern-Leistner},
+      year={2014},
+      eprint={1203.0276},
+      archivePrefix={arXiv},
+      primaryClass={math.AG}
+}
+
+@misc{donovan2017perverse,
+      title={Perverse schobers and wall crossing}, 
+      author={W. Donovan},
+      year={2017},
+      eprint={1703.00592},
+      archivePrefix={arXiv},
+      primaryClass={math.AG}
+}
+
+@misc{Beilinson1978,
+      title={Coherent sheaves on Pn and problems of linear algebra}, 
+      author={Beilinson, A. A.},
+      year={1978},
+   url={https://doi.org/10.1007/BF01681436},
+   DOI={10.1007/BF01681436},
+   journal={Functional Analysis and Its Applications},
+   }
