Complete MF equals D_Sg proof

--- a/foundations.tex
+++ b/foundations.tex
@@ -119,9 +119,9 @@ complexes.
 
 \begin{definition}[label=defn:verdierquotient]{}{}
     If $\calC$ is a triangulated category, and $\calD$ is a triangulated
-    subcategory, then the morphisms in $\calC$ whose cones are objects of
-    $\calD$ form a localizing class $\Sigma$. We then define the quotient
-    $\calC/\calD\coloneqq\calC[\Sigma^{-1}]$.
+    subcategory, then the morphisms in $\calC$ whose cones can be taken to be
+    objects of $\calD$ form a localizing class $\Sigma$. We then define the
+    quotient $\calC/\calD\coloneqq\calC[\Sigma^{-1}]$.
 \end{definition}
 
 \begin{remark}{}
