more cleaning up the foundations section

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -349,3 +349,76 @@ note = {(Accessed on 04/16/2024)}
    DOI={10.1007/BF01681436},
    journal={Functional Analysis and Its Applications},
    }
+
+
+@book{gelfand_methods_2003,
+    shorthand = {GelMan},
+	address = {Berlin, Heidelberg},
+	series = {Springer {Monographs} in {Mathematics}},
+	title = {Methods of {Homological} {Algebra}},
+	copyright = {http://www.springer.com/tdm},
+	isbn = {9783642078132 9783662124925},
+	url = {http://link.springer.com/10.1007/978-3-662-12492-5},
+	urldate = {2024-04-17},
+	publisher = {Springer},
+	author = {Gelfand, Sergei I. and Manin, Yuri I.},
+	year = {2003},
+	doi = {10.1007/978-3-662-12492-5},
+	keywords = {
+                                    
+                                        
+                                            Cohomology
+                                        
+                                    
+                                , 
+                                    
+                                        
+                                            Homological algebra
+                                        
+                                    
+                                , 
+                                    
+                                        
+                                            Sheaf cohomology
+                                        
+                                    
+                                , 
+                                    
+                                        
+                                            category theory
+                                        
+                                    
+                                , 
+                                    
+                                        
+                                            homotopical algebra
+                                        
+                                    
+                                },
+}
+
+@article{calabrese_derived_2016,
+    shorthand = {CalTh15},
+	title = {Derived equivalent {Calabi}–{Yau} threefolds from cubic fourfolds},
+	volume = {365},
+	issn = {0025-5831, 1432-1807},
+	url = {http://link.springer.com/10.1007/s00208-015-1260-6},
+	doi = {10.1007/s00208-015-1260-6},
+	language = {en},
+	number = {1-2},
+	urldate = {2024-04-17},
+	journal = {Mathematische Annalen},
+	author = {Calabrese, John R. and Thomas, Richard P.},
+	month = jun,
+	year = {2016},
+	pages = {155--172},
+}
+
+@article{CaldararuThesis,
+   shorthand = {Cal00},
+   title = {Derived categories of twisted sheaves on a Calabi-Yau manifold},
+   author = {Caldararu, A.H.},
+
+
+
+}
