--- a/cubicfourfold.tex
+++ b/cubicfourfold.tex
@@ -310,7 +310,8 @@ But the point now is that since $\mathrm{Bl}=\P \calF^*$, then $\calF =\phi_* \O
 
     More generally \cite[Remark~13.36]{Wedhorn}, given a projective bundle $\pi:\P\calE \rightarrow B$ which can be defined as a relative Proj of a sheaf of algebras $\underline{\Proj}\, \mathrm{Sym}^\bullet \calE$, we have the following fact: $$\pi_* \O_{\P\calE}(d)=\mathrm{Sym}^d \calE$$ 
 
-    In particular, $\pi_*\O(1)=\calE$. We also have a relative Euler sequence: $$0\rightarrow \O\rightarrow \pi^* \calE \otimes \O_{\pi}(1)\rightarrow \calT_{\P\calE/B}\rightarrow 0$$since $$\calT_\pi:=\calT_{\P\calE/B}\simeq \lHom(\O_{\pi}(-1),\mathcal{Q})\simeq \frac{\lHom(\O_{\pi}(-1),\mathcal{Q}\oplus \O_{\pi}(-1))}{\lHom (\O_{\pi}(-1), \O_{\pi}(-1))}\simeq \frac{\lHom(\O_{\pi}(-1), \pi^* \calE)}{ \O}$$  
+    In particular, $\pi_*\O(1)=\calE$. Recall the relative Euler sequence: $$0\rightarrow \O\rightarrow \pi^* \calE \otimes \O_{\pi}(1)\rightarrow \calT_{\P\calE/B}\rightarrow 0$$
+    %since $$\calT_\pi:=\calT_{\P\calE/B}\simeq \lHom(\O_{\pi}(-1),\mathcal{Q})\simeq \frac{\lHom(\O_{\pi}(-1),\mathcal{Q}\oplus \O_{\pi}(-1))}{\lHom (\O_{\pi}(-1), \O_{\pi}(-1))}\simeq \frac{\lHom(\O_{\pi}(-1), \pi^* \calE)}{ \O}$$  
 
     By twisting by $-1$ and taking determinants, we see that $$\pi^* \det \calE \simeq \O_\pi(-1) \otimes \det(\calT_\pi\otimes \O_\pi(-1))\simeq \O_\pi(-k-1) \otimes \det(\calT_\pi)$$and so $$\omega_\pi\simeq \pi^* \det \calE^* \otimes \O_{\pi}(-k-1)$$
 
