Cubics with a plane in a pencil

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -202,6 +202,7 @@
 }
 
 @article{auel_fibrations_2014,
+    shorthand = {Ber15},
 	title = {Fibrations in complete intersections of quadrics, {Clifford} algebras, derived categories, and rationality problems},
 	volume = {102},
 	copyright = {https://www.elsevier.com/tdm/userlicense/1.0/},
